[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/L9_GrandHotel/rooms/room_bg-min.png" type="Texture" id=1]
[ext_resource path="res://Levels/9.0 - Grand Hotel/hotel_room_bed.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/L9_GrandHotel/rooms/room_phone-min.png" type="Texture" id=3]
[ext_resource path="res://Levels/9.0 - Grand Hotel/hotel_room_table.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/9.0 - Grand Hotel/hotel_room_wardrobe.tscn" type="PackedScene" id=5]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Brains/DescriptionBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/9.0 - Grand Hotel/hotel_room.gd" type="Script" id=9]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=15]
[ext_resource path="res://BG.tscn" type="PackedScene" id=16]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 82.2148, 31.7123 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 92.3055, 34.1028 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 39.7158, 31.4753 )

[node name="hotel_room" type="Node2D"]
script = ExtResource( 9 )
__meta__ = {
"_edit_vertical_guides_": [ -913.058 ]
}

[node name="topTZ" parent="." instance=ExtResource( 6 )]
position = Vector2( 940.122, 428.857 )

[node name="CollisionShape2D" parent="topTZ" index="0"]
position = Vector2( -9.24988, 24.386 )
shape = SubResource( 1 )

[node name="bottomTZ" parent="." instance=ExtResource( 6 )]
position = Vector2( 916.577, 1153.71 )

[node name="CollisionShape2D" parent="bottomTZ" index="0"]
shape = SubResource( 2 )

[node name="topSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 936.963, 578.59 )

[node name="bottomSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 922.435, 1001.35 )

[node name="BG" parent="." instance=ExtResource( 16 )]
margin_left = -1868.3
margin_top = -3089.07
margin_right = 3706.7
margin_bottom = 2518.93

[node name="bgstuff" type="Node2D" parent="."]

[node name="room_bg-min" type="Sprite" parent="bgstuff"]
position = Vector2( 932.11, 548.893 )
texture = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 910.359, 984.914 )
camera = NodePath("../../PuppyCamera")

[node name="hotel_room_bed" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 751.614, 776.11 )

[node name="hotel_room_wardrobe" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 1111.92, 534.256 )

[node name="hotel_room_table" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 750.892, 817.805 )

[node name="room_phone-min" type="Sprite" parent="YSort/hotel_room_table"]
position = Vector2( 5.59766, -120.602 )
texture = ExtResource( 3 )
flip_h = true

[node name="description_box" parent="YSort/hotel_room_table/room_phone-min" instance=ExtResource( 7 )]
on_top = true
description = [ "You dial up an old flame.", "RING... RING... RING...", "No one picks up..." ]

[node name="CollisionShape2D" parent="YSort/hotel_room_table/room_phone-min/description_box/SeenBox" index="0"]
position = Vector2( -5.88629, 137.907 )
shape = SubResource( 3 )

[node name="SmellArrow" parent="YSort/hotel_room_table/room_phone-min/description_box/SeenBox/CollisionShape2D" index="0"]
position = Vector2( -0.641724, -242.792 )

[node name="PuppyCamera" parent="." instance=ExtResource( 15 )]
position = Vector2( 436.776, -516.806 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( 9.36499, -108.736 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1922.17, 1206.08 )

[node name="FG" type="Node2D" parent="."]
position = Vector2( 4.24261, 0 )

[node name="ColorRect" type="ColorRect" parent="FG"]
margin_left = 3.0
margin_top = 298.0
margin_right = 663.0
margin_bottom = 791.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collisions" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/StaticBody2D"]
position = Vector2( -0.840942, -0.840942 )
polygon = PoolVector2Array( 837.34, 1072.85, 833.976, 1188.9, 258.803, 1153.58, 947.097, -513.919, 1641.59, 1191.4, 1016.07, 1191.4, 1003.07, 1063, 1174.61, 1061.31, 1177.97, 519.776, 1016.52, 526.503, 918.556, 406.527, 850.023, 523.14, 678.48, 519.776, 683.525, 1069.72 )

[connection signal="transition_triggered" from="topTZ" to="." method="_on_topTZ_transition_triggered"]

[editable path="topTZ"]
[editable path="bottomTZ"]
[editable path="YSort/hotel_room_table/room_phone-min/description_box"]
[editable path="YSort/hotel_room_table/room_phone-min/description_box/SeenBox"]
[editable path="PuppyCamera"]
